imageData will be the death of me

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<style src="styles/index.css"></style>
 	<script src= "src/cnmLib.js"></script>
     <script src= "src/index.js"></script>
+    <script src= "src/sand.js"></script>
 </head>
 <body>
 <canvas>
