--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
     <label>Sand Color: 
       <select id="chooserSandColor"> 
         <option value="red">Red</option>
-        <option value="green" selected>Green</option>
+        <option value="green">Green</option>
         <option value="blue">Blue</option>
+        <option value="yellow" selected>Yellow</option>
       </select>
     </label>
     
