--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 		
     <label>Sand Color: 
       <select id="chooserSandColor"> 
-        <option value="red">Red</option>
-        <option value="green">Green</option>
-        <option value="blue">Blue</option>
-        <option value="yellow" selected>Yellow</option>
+        <option value=1 selected>Yellow</option>
+        <option value=2>Red</option>
+        <option value=3>Green</option>
+        <option value=4>Blue</option>
       </select>
     </label>
     
