better color system

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 		
     <label>Sand Color: 
       <select id="chooserSandColor"> 
-        <option value=1 selected>Yellow</option>
-        <option value=2>Red</option>
-        <option value=3>Green</option>
-        <option value=4>Blue</option>
+        <option value='#FFFF00' selected>Yellow</option>
+        <option value='#FF0000'>Red</option>
+        <option value='#00FF00'>Green</option>
+        <option value='#0000FF'>Blue</option>
       </select>
     </label>
     
